<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choice_success_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.chupryna.schoolsystem.activity.ChoiceSuccessActivity">

    <RadioGroup
        android:id="@+id/radioGroupSuccess"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="50dp"
        android:checkedButton="@+id/radioButton_success_day">

        <RadioButton
            android:id="@+id/radioButton_success_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day" />

        <TextView
            android:id="@+id/text_success_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:hint="@string/choice_date"
            style="@style/Widget.AppCompat.EditText"/>


        <RadioButton
            android:id="@+id/radioButton_success_subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:text="@string/subject" />

        <Spinner
            android:id="@+id/spinner_success_school"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_success_review"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupSuccess"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/review"/>

    <ProgressBar
        android:id="@+id/choice_success_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
