<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    android:paddingBottom="5dp">

    <TextView
        android:id="@+id/text_success_number_lesson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.1"
        tools:text="@string/lesson"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/text_success_info_lesson"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.45"
        tools:text="Предмет/дата"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

     <TextView
        android:id="@+id/text_success_presence"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.3"
        tools:text="@string/presence"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/text_success_rating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="0.15"
        tools:text="@string/rating"
        android:textSize="14sp"
        android:textColor="@android:color/black"/>
</LinearLayout>