<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh_layout_timetable_calls"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    tools:context="ua.chupryna.schoolsystem.activity.TimetableCallsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/number_symbol"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/text_time_calls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_lesson"
            android:layout_centerHorizontal="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/break_between_lessons"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_calls"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/text_num"
            android:layout_marginTop="5dp">
        </android.support.v7.widget.RecyclerView>

    </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>