<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/choice_timetable_lesson_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ChoiceTimetableLessonActivity">

    <RadioGroup
        android:id="@+id/radioGroup_choice_timetable_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="40dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <RadioButton
            android:id="@+id/radioButton_timetable_pupils"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetable_pupils"/>

        <RadioButton
            android:id="@+id/radioButton_timetable_teachers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/timetable_teachers"/>

    </RadioGroup>

    <Spinner
        android:id="@+id/spinner_choice_timetable_lesson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp">
    </Spinner>

    <Button
        android:id="@+id/button_to_view_timetable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/to_view_timetable"/>

    <TextView
        android:id="@+id/text_saved_timetables"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/saved_timetables"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone"/>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_saved_timetable"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:id="@+id/choice_timetable_lesson_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_anchor="@id/recycler_saved_timetable"
            app:layout_anchorGravity="center"
            android:visibility="gone" />

    </android.support.design.widget.CoordinatorLayout>

</LinearLayout>