<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".activity.ProfileActivity">

    <ProgressBar
        android:id="@+id/profile_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="100dp"
        android:layout_height="135dp"
        android:layout_marginEnd="30dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/text_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_profile"
        android:text="@string/change_photo"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_lastName_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_profile"
        android:text="@string/lastName"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/text_lastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_profile"
        android:layout_below="@id/text_lastName_title"
        tools:text="Петренко"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_firstName_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_profile"
        android:layout_below="@id/text_lastName"
        android:layout_marginTop="10dp"
        android:text="@string/firstName"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/text_firstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_profile"
        android:layout_below="@id/text_firstName_title"
        tools:text="Олександр"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_surName_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_profile"
        android:layout_below="@id/text_firstName"
        android:layout_marginTop="10dp"
        android:text="@string/surName"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/text_surName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/image_profile"
        android:layout_below="@id/text_surName_title"
        tools:text="Олегович"
        android:textColor="@android:color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_profile_telephone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_change_photo"
        android:layout_marginTop="15dp"
        android:text="@string/telephone"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/profile_telephone_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_profile_telephone_title"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/text_profile_telephone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="+380675412385"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_call" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_telephone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_profile_telephone_title"
        android:inputType="phone"
        android:lines="1"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/text_change_telephone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_telephone"
        android:layout_alignParentEnd="true"
        android:text="@string/change"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id="@+id/text_profile_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_change_telephone"
        android:text="@string/email"
        android:textSize="14sp"/>

    <LinearLayout
        android:id="@+id/profile_email_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/text_profile_email_title">

        <TextView
            android:id="@+id/text_profile_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="pupil@ukr.net"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@android:drawable/sym_action_email"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_profile_school_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_email_form"
        android:layout_marginTop="15dp"
        android:text="@string/school"
        android:textSize="14sp" />

    <LinearLayout
        android:id="@+id/profile_location_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_profile_school_title"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/text_profile_school_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Львівська загальноосвітня школа №54"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:maxLines="2"/>

            <TextView
                android:id="@+id/text_profile_school_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                tools:text="Львів, вул. Є.Коновальця, б.22"
                android:textColor="@android:color/black"
                android:textSize="13sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@android:drawable/ic_menu_mapmode"/>
    </LinearLayout>

    <TextView
        android:id="@+id/text_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:text="@string/change_password"
        android:textSize="18sp"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>