<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.chupryna.schoolsystem.activity.PasswordRecoveryActivity">


    <ProgressBar
        android:id="@+id/recovery_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/recovery_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_for_recovery"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_email_for_recovery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_message_recovery_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            tools:text="Результат відправки коду" />

        <TextView
            android:id="@+id/text_recovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_gravity="end"
            android:text="@string/recovery"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/code"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/edit_recovery_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:singleLine="true"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/text_message_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/red"
            tools:text="Результат перевірки коду"/>

        <TextView
            android:id="@+id/text_confirm_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/confirm"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

</RelativeLayout>